fixed sidebar control on mobile and desktop

--- a/src/app/platform/[slug]/storyteller/storyteller.css
+++ b/src/app/platform/[slug]/storyteller/storyteller.css
@@ -1,7 +1,7 @@
 
 .storytelling-page_content {
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     background-color: var(--page-content-bg);
     color: rgb(255, 255, 255);
     overflow-x: hidden;
@@ -12,7 +12,7 @@
 .storytelling-page_content::-webkit-scrollbar {
   width: 12px; /* or whatever width you want */
 }
-
+ 
 /* Style the scrollbar track */
 .storytelling-page_content::-webkit-scrollbar-track {
     background-color: var(--page-content-bg);
@@ -68,7 +68,7 @@
 }
 
 .storytelling-pageBody_innerBox {
-    width: 60%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
