--- a/src/components/carouselComponents/cc.css
+++ b/src/components/carouselComponents/cc.css
@@ -1,132 +1,3 @@
-.legalAssistant_wrapper {
-    width: 100vw;
-    height: 100vh;
-    box-sizing: border-box;
-    display: flex;
-}
- 
-
-.page_content_la {
-    width: 100%;
-    height: 100vh;
-    background-color: var(--page-bg);
-    color: white;
-    display: flex;
-    flex-direction: column;
-    overflow-x: hidden;
-    padding-bottom: .5rem;
-    overflow-y: hidden;
-    box-sizing: border-box; 
-}
-
-
-.pageTop_la {
-    align-self: center;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: .5rem;
-    width: 100%;
-    padding: .8rem 1rem;
-    margin-bottom: .3rem;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.311);
-}
-
-.la_sideBar_trigger {
-    cursor: pointer;
-    width: fit-content;
-    color: black;
-    flex: 1;
-    /* border: 1px solid black; */
-}
-
-
-.la_clearChatBtn {
-    font-size: 14px;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    color: black;
-}
-
-.la_clearChatBtn:hover {
-    text-decoration: underline;
-}
-
-
-.pageBody_la {
-    width: 95%;
-    height: 82vh;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    padding: 0;
-    align-self: center;
-    gap: 1rem;
-}
-
-.la_pageTitle_container {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-    align-items: center;
-    justify-content: center;
-    flex: 1;
-    /* border: 1px solid black; */
-    align-self: center;
-}
-
-.modelTitle_container {
-    height: max-content;
-    width: max-content;
-    padding: .7rem 3rem;
-    border-radius: 20px;
-    align-self: center;
-    color: rgb(0, 0, 0);
-    font-weight: 600;
-    font-size: 18px;
-
-    /* From https://css.glass */
-    background: rgba(255, 255, 255, 0.21);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.3);
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    border: 1px solid rgba(255, 255, 255, .3);
-}
-
-.la_cleartBtn_wrapper {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    /* border: 1px solid black; */
-}
-
-
-.la_clearChatBtn {
-    font-size: 12px;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    color: black;
-    background-color: #cd1b18ca;
-    border-radius: 12px;
-    color: white;
-    width: max-content;
-}
-
-
-.interaction_area {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    gap: .5rem;
-    overflow: hidden;
-    flex: 1;
-    /* border: 1px solid rgb(0, 0, 0); */
-}
 
 .chats_area {
     width: 100%;
@@ -312,50 +183,14 @@
 
 
 @media (max-width: 575px) {
-
-    .modelTitle_container {
-        padding: .7rem 2rem;
-        font-size: 14px;
-    }
-
-    .page_content_la {
-        padding-bottom: 0;
-    }
-
-    .pageTop_la {
-        padding: .5rem;
-        margin-bottom: .5rem;
-    }
-
-    .la_sideBar_trigger {
-        width: 20%;
-    }
-
-    .la_pageTitle_container {
-        width: 60%;
-    }
-
-    .la_cleartBtn_wrapper {
-        width: 20%;
-    }
-
-    .la_clearChatBtn {
-        padding: 0.4rem .8rem;
-        font-size: 10px;
-    }
-
-    .pageBody_la {
-        height: 78vh;
-        padding: .4rem 0;
-    }
-
     .chats_area {
         padding: 0;
     }
 
     .inputbox {
-        width: 100%;
+        width: 94vw;
         padding: .4rem 1rem;
+        max-width: 94vw;
     }
 
     .chatInput {
